Refactor path handling in BinaryDataCompiler and related classes for improved safety and clarity by introducing PathValidator